# jazzbuck-automation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  __main__.py  authentication.py  latest_pocket_data.txt  latest_pocket_read.txt  pyproject.toml
jazzbuck_automation/: __init__.py  check_email.py  luigi_experiment.py  retrieve_pocket.py  send_data_to_webhooks.py
jazzbuck_automation/templates/: to-do.md
jazzbuck_automation/tests/: test_retrive_pocket.py
scripts/: archive-inboxes.py  email_todo_to_obsidian.py  pocket_to_obsidian.py
tasks/: pocket_to_obsidian.py
